--- a/index.html
+++ b/index.html
@@ -18,30 +18,30 @@
 
     <!--Шапка-->
     <header class="page-header">
-        <div class="container header-nav-contacts">
-            <nav class="main-nav">
-                <a href="./index.html" class="logo">
-                    <span class="color-span">Web</span>Studio</a>
-                <ul class="site-nav">
-                    <li class="site-nav-item"><a href="./index.html" class="site-nav-link current">Студия</a></li>
-                    <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
-                    <li class="site-nav-item"><a href="#" class="site-nav-link">Контакты</a></li>
+        <div class="container page-header__contacts">
+            <nav class="page-header__nav">
+                <a href="./index.html" class="page-header__logo">
+                    <span class="page-header__span">Web</span>Studio</a>
+                <ul class="page-header__nav">
+                    <li class="page-header__item"><a href="./index.html" class="page-header__link page-header__link--active">Студия</a></li>
+                    <li class="page-header__item"><a href="./portfolio.html" class="page-header__link">Портфолио</a></li>
+                    <li class="page-header__item"><a href="#" class="page-header__link">Контакты</a></li>
                 </ul>
             </nav>
 
             <ul class="contacts-nav">
-                <li class="contacts-nav-item">
-                    <a href="mailto:info@example.com" class="link">
-                        <svg class="icon-header" width="16" height="12">
+                <li class="contacts-nav__item">
+                    <a href="mailto:info@example.com" class="contacts-nav__link">
+                        <svg class="contacts-nav__icon" width="16" height="12">
                             <use href="./images/sprite.svg#icon-mail"></use>
                             
                         </svg>
                         info@example.com
                     </a>
                 </li>
-                <li class="contacts-nav-item">
-                    <a href="tel:+380961111111" class="link">
-                        <svg class="icon-header" width="10" height="16">
+                <li class="contacts-nav__item">
+                    <a href="tel:+380961111111" class="contacts-nav__link">
+                        <svg class="contacts-nav__icon" width="10" height="16">
                             <use href="./images/sprite.svg#icon-phone"></use>
                         </svg>
                         +38 096 111 11 11
