--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section class="hero">
             <div class="container">
-                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <h1 class="hero__title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button data-modal-open type="button" class="button primary">Заказать услугу</button>
             </div>
         </section>
@@ -66,50 +66,50 @@
 
         <section class="section">
             <div class="container">
-                <ul class="features-list">
+                <ul class="features">
 
-                    <li class="section-title">
-                        <div class="section-icon">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                        <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию
+                        <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию
                             позиций.</p>
                     </li>
 
-                    <li class="section-title">
-                        <div class="section-icon">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-clock"></use>
                             </svg>
                         </div>
 
                         <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                        <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров
+                        <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.</p>
                     </li>
-                    <li class="section-title">
-                        <div class="section-icon">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <svg width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram"></use>
                             </svg>
                         </div>
 
                         <h3>ПЛАНИРОВАНИЕ</h3>
-                        <p class="section-text">Равным образом консультация с широким активом в значительной степени
+                        <p class="features__text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li class="section-title">
-                        <div class="section-icon">
-                            <svg class="feature-icon" width="70" height="70">
+                    <li class="features__item">
+                        <div class="features__icon">
+                            <svg  width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
                         </div>
 
                         <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                        <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                        <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
                     </li>
                 </ul>
