--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />    <link rel="stylesheet" href="./css/styles.css" />
+            <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 
@@ -240,7 +240,7 @@
                     width="370"
                     height="294">
                     <div class="card-content__overlay">
-                        <p class="card-content__tex">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                        <p class="card-content__text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
                             платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
                     </div>
