--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav class="page-header__nav">
                 <a href="./index.html" class="page-header__logo">
                     <span class="page-header__span">Web</span>Studio</a>
-                <ul class="page-header__nav">
-                    <li class="page-header__item"><a href="./index.html" class="page-header__link page-header__link--active">Студия</a></li>
-                    <li class="page-header__item"><a href="./portfolio.html" class="page-header__link">Портфолио</a></li>
-                    <li class="page-header__item"><a href="#" class="page-header__link">Контакты</a></li>
+                <ul class="nav"> 
+                    <li class="nav__item"><a href="./index.html" class="nav__link nav__link--active">Студия</a></li>
+                    <li class="nav__item"><a href="./portfolio.html" class=" nav__link">Портфолио</a></li>
+                    <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
                 </ul>
             </nav>
 
@@ -71,7 +71,7 @@
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <h3 class="features__title">Внимание к деталям</h3>
                         <p class="features__text">Идейные соображения, а также начало повседневной работы по формированию
                             позиций.</p>
                     </li>
@@ -83,7 +83,8 @@
                             </svg>
                         </div>
 
-                        <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                        <h3 class="features__title">Пунктуальность</h3>
+
                         <p class="features__text">Задача организации, в особенности же рамки и место обучения кадров
                             влечет за собой.</p>
                     </li>
@@ -94,7 +95,7 @@
                             </svg>
                         </div>
 
-                        <h3>ПЛАНИРОВАНИЕ</h3>
+                        <h3 class="features__title">Планирование</h3>
                         <p class="features__text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
@@ -105,7 +106,7 @@
                             </svg>
                         </div>
 
-                        <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <h3 class="features__title">Современные технологии</h3>
                         <p class="features__text">Значимость этих проблем настолько очевидна, что реализация плановых
                             заданий.</p>
                     </li>
@@ -115,10 +116,10 @@
         </section>
 
         <!-- work -->
-        <section class="work section">
+        <section class="section section--nopaddingtop">
             <div class="container">
-                <h2 class="work__title">Чем мы занимаемся</h2>
-                <ul class="work__list">
+                <h2 class="section__title">Чем мы занимаемся</h2>
+                <ul class="work">
                     <li class="work__item"><img src="./images/box1.jpg" alt="Написание кодов" 
                         width="370">
                         <p class="work__text">Десктопные приложения</p></li>
@@ -137,37 +138,37 @@
 
 
         <!-- Команда -->
-        <section class="team section">
+        <section class="section section--background">
             <div class="container">
-                <h2 class="team__title">Наша Команда</h2>
-                <ul class="team__list">
-                    <li class="team__description"><img src="./images/person1.jpg"
+                <h2 class="section__title">Наша Команда</h2>
+                <ul class="team">
+                    <li class="team__item"><img src="./images/person1.jpg"
                             alt="Фото члена команды Игорь Демьяненко" width="270">
-                        <div class="team__general">
+                        <div class="team__box">
                             <h3 class="team__person">Игорь Демьяненко</h3>
                             <p class="team__text">Product Designer</p>
 
-                                <ul class="team-icons">
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                <ul class="social">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -177,32 +178,33 @@
                     </li>
 
 
-                    <li class="team__description"><img src="./images/person2.jpg"
+                    <li class="team__item"><img src="./images/person2.jpg"
                             alt="Фото члена команды Ольга Репина" width="270">
-                        <div class="team__general">
+                        <div class="team__box">
                             <h3 class="team__person">Ольга Репина</h3>
                             <p class="team__text">Frontend Developer</p>
-                                <ul class="team-icons">
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+
+                                <ul class="social">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -211,32 +213,32 @@
                         </div>
                     </li>
 
-                    <li class="team__description"><img src="./images/person3.jpg"
+                    <li class="team__item"><img src="./images/person3.jpg"
                             alt="Фото члена команды Николай Тарасов" width="270">
-                        <div class="team__general">
+                        <div class="team__box">
                             <h3 class="team__person">Николай Тарасов</h3>
                             <p class="team__text">Marketing</p>
-                                <ul class="team-icons">
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                <ul class="social">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -246,32 +248,32 @@
 
                     </li>
 
-                    <li class="team__description"><img src="./images/person4.jpg"
+                    <li class="team__item"><img src="./images/person4.jpg"
                             alt="Фото члена команды Михали Ермаков" width="270">
-                        <div class="team__general">
+                        <div class="team__box">
                             <h3 class="team__person">Михаил Ермаков</h3>
                             <p class="team__text">UI Designer</p>
-                                <ul class="team-icons">
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                <ul class="social">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-facebook"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-icons__item">
-                                        <a href="#" class="team-icons__link"> <svg class="team-icons__icon" width="20" height="20">
+                                    <li class="social__item">
+                                        <a href="#" class="social__link"> <svg class="social__icon" width="20" height="20">
                                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
@@ -286,10 +288,10 @@
         </section>
 
 
-        <section class="client section">
+        <section class="section">
             <div class="container">
-                <h2 class="client__title">Постоянные клиенты</h2>
-                <ul class="client__list">
+                <h2 class="section__title">Постоянные клиенты</h2>
+                <ul class="client">
                     <li class="client__item"><a href="#" class="client__link">
                             <svg class="client__icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-group"></use>
@@ -336,14 +338,14 @@
             <a href="./index.html" class="page-footer__logo">
                 <span class="page-footer__span">Web</span>Studio</a>
 
-            <address class="page-footer__adress">
-                <ul class="page-footer__list">
-                    <li class="page-footer__item">
-                        <p class="page-footer__text">г. Киев, пр-т Леси Украинки, 26</p>
+            <address class="adress">
+                <ul class="adress__list">
+                    <li class="adress__item">
+                        <p class="adress__text">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
-                    <li class="contacts-foot-item"><a href="mailto:info@example.com" class="page-footer__link">info@example.com</a>
+                    <li class="adress__item"><a href="mailto:info@example.com" class="adress__link">info@example.com</a>
                     </li>
-                    <li class="contacts-foot-item"><a href="tel:+380961111111" class="page-footer__link">+38 096 111 11 11</a></li>
+                    <li class="adress__item"><a href="tel:+380961111111" class="adress__link">+38 096 111 11 11</a></li>
                 </ul>
             </address>
             </div>
